tests/fixtures/invalid/bytes_div_int.py
# Cannot divide Bytes and Int
x: float = b"hello" / 1
